<resources>
    <string name="app_name">Bmobile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_url">This url is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_network">Network Error</string>
    <string name="url_endpoints">URL endpoint</string>
    <string name="awtenantcode_endpoints">Awtenand code </string>
    <string name="serverpassword_endpoints">Server  password</string>
    <string name="serveruser_endpoints">Server user</string>
    <string name="Enviar">Enviar</string>

    <string-array name="planets_array">
        <item>Server 1</item>
        <item>Server 2</item>
        <item>Server 3</item>
        <item>Server 4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="non_empty_query">Query should not be empty</string>
    <string name="graficas">Graficas</string>
    <string name="chat">Chat</string>
    <string name="aruba">Aruba</string>
    <string name="logo">Logo</string>
    <string name="title_activity_user_endpoints">Sign in</string>
</resources>
