<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".UserEndpointsActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/urlEdpointsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_endpoints"
            android:inputType="textUri"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/awtenantcode_endpointsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/awtenantcode_endpoints"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/serverpassword_endpointsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serveruser_endpoints"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/serveruser_endpointsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serverpassword_endpoints"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_Endpoints_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Enviar"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>